Fix headshot image display: update path and adjust positioning

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <ul class="nav-links">
                 <li><a href="#home" class="active">Home</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#tutoring">Math Tutoring</a></li>
+                <li><a href="tutoring.html">Math Tutoring</a></li>
                 <li><a href="#writing">Writing</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -47,7 +47,7 @@
             <div class="container">
                 <div class="profile-section">
                     <div class="profile-image">
-                        <!-- Replace with your image -->
+                        <img src="images/headshot.jpg" alt="Cory Spitzer's headshot"/>
                         <div class="image-placeholder">Your Photo</div>
                     </div>
                     <div class="bio-content">
@@ -58,7 +58,7 @@
                         </p>
                         <div class="cta-buttons">
                             <a href="#portfolio" class="cta-button">View My Work</a>
-                            <a href="#tutoring" class="cta-button secondary">Math Tutoring</a>
+                            <a href="tutoring.html" class="cta-button secondary">Math Tutoring</a>
                         </div>
                     </div>
                 </div>
