Make tutoring page style consistent with homepage

--- a/index.html
+++ b/index.html
@@ -72,7 +72,42 @@
             <div class="container">
                 <h2>Featured Projects</h2>
                 <div class="project-cards">
-                    <!-- Project cards will be dynamically added here -->
+                    <div class="project-card" id="project-1">
+                        <div class="project-image">
+                            <img src="images/placeholder-project-1.jpg" alt="Project 1">
+                        </div>
+                        <div class="project-content">
+                            <h3>Portfolio Website</h3>
+                            <p>A responsive personal portfolio website built with HTML, CSS, and JavaScript. Features modern design principles and smooth animations.</p>
+                            <div class="project-tech">
+                                <span class="tech-tag">HTML5</span>
+                                <span class="tech-tag">CSS3</span>
+                                <span class="tech-tag">JavaScript</span>
+                            </div>
+                            <div class="project-links">
+                                <a href="#" class="project-link">View Project</a>
+                                <a href="#" class="project-link">Source Code</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project-card" id="project-2">
+                        <div class="project-image">
+                            <img src="images/placeholder-project-2.jpg" alt="Project 2">
+                        </div>
+                        <div class="project-content">
+                            <h3>Task Management App</h3>
+                            <p>A web-based task management application that helps users organize their daily activities and track progress efficiently.</p>
+                            <div class="project-tech">
+                                <span class="tech-tag">React</span>
+                                <span class="tech-tag">Node.js</span>
+                                <span class="tech-tag">MongoDB</span>
+                            </div>
+                            <div class="project-links">
+                                <a href="#" class="project-link">View Project</a>
+                                <a href="#" class="project-link">Source Code</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
