Add math advice project

--- a/index.html
+++ b/index.html
@@ -74,19 +74,19 @@
                 <div class="project-cards">
                     <div class="project-card" id="project-1">
                         <div class="project-image">
-                            <img src="images/placeholder-project-1.jpg" alt="Project 1">
+                            <img src="images/math-advice-screenshot2.PNG" alt="Math Study Advice Website">
                         </div>
                         <div class="project-content">
-                            <h3>Portfolio Website</h3>
-                            <p>A responsive personal portfolio website built with HTML, CSS, and JavaScript. Features modern design principles and smooth animations.</p>
+                            <h3>Study Advice for Math</h3>
+                            <p>A comprehensive guide providing essential study strategies and tips for mathematics students. Features clear, actionable advice to help students develop effective learning habits and succeed in their math courses.</p>
                             <div class="project-tech">
                                 <span class="tech-tag">HTML5</span>
-                                <span class="tech-tag">CSS3</span>
-                                <span class="tech-tag">JavaScript</span>
+                                <span class="tech-tag">CSS3</span>   
+                                <span class="tech-tag">GitHub Pages</span>
                             </div>
                             <div class="project-links">
-                                <a href="#" class="project-link">View Project</a>
-                                <a href="#" class="project-link">Source Code</a>
+                                <a href="https://coryspitzer.github.io/math-advice/" class="project-link" target="_blank">Live Demo</a>
+                                <a href="https://github.com/CorySpitzer/math-advice/tree/main" class="project-link" target="_blank">Source Code</a>
                             </div>
                         </div>
                     </div>
