Add Portfolio/Homepage (this) project

--- a/index.html
+++ b/index.html
@@ -92,19 +92,19 @@
                     </div>
                     <div class="project-card" id="project-2">
                         <div class="project-image">
-                            <img src="images/placeholder-project-2.jpg" alt="Project 2">
+                            <img src="images/portfolio-screenshot.PNG" alt="Portfolio Website Screenshot">
                         </div>
                         <div class="project-content">
-                            <h3>Task Management App</h3>
-                            <p>A web-based task management application that helps users organize their daily activities and track progress efficiently.</p>
+                            <h3>This Portfolio/Homepage Site!</h3>
+                            <p>A modern, responsive portfolio website featuring a clean design, dark/light mode toggle, and smooth animations. Built with vanilla web technologies for optimal performance and maintainability.</p>
                             <div class="project-tech">
-                                <span class="tech-tag">React</span>
-                                <span class="tech-tag">Node.js</span>
-                                <span class="tech-tag">MongoDB</span>
+                                <span class="tech-tag">HTML5</span>
+                                <span class="tech-tag">CSS3</span>
+                                <span class="tech-tag">JavaScript</span>
+                                <span class="tech-tag">GitHub Pages</span>
                             </div>
                             <div class="project-links">
-                                <a href="#" class="project-link">View Project</a>
-                                <a href="#" class="project-link">Source Code</a>
+                                <a href="https://github.com/CorySpitzer/portfolio-site" class="project-link" target="_blank">Source Code</a>
                             </div>
                         </div>
                     </div>
