--- a/tutoring.html
+++ b/tutoring.html
@@ -19,6 +19,7 @@
                 <a href="index.html">My Work</a>
                 <a href="tutoring.html" class="active">Math Tutoring</a>
                 <a href="https://thentheydied.substack.com/" target="_blank">Writing</a>
+                <a href="contact.html">Contact</a>
             </div>
             <div class="nav-controls">
                 <button class="hamburger" aria-label="Toggle navigation">
