Add Math Tutoring blurb

--- a/tutoring.html
+++ b/tutoring.html
@@ -52,8 +52,8 @@
     <main class="tutoring-page">
         <section class="hero tutoring-hero">
             <div class="container">
-                <h1>Math Tutoring Services</h1>
-                <p class="lead">Empowering students to master mathematics through personalized instruction</p>
+                <h1>Math Tutoring</h1>
+                <p class="lead">I am a patient and dedicated math tutor with a passion for making math understandable and approachable. With top grades in Calculus I through III, Linear Algebra, Discrete Math, and Statistics, I bring a strong foundation to every session. Specializing in algebra, I take pride in helping students build confidence and master key concepts at their own pace, always tailoring my approach to suit their unique learning styles. My goal is to inspire a love for math while ensuring each student feels supported and empowered.</p>
             </div>
         </section>
 
