Remove extra descriptions

--- a/tutoring.html
+++ b/tutoring.html
@@ -57,7 +57,7 @@
             </div>
         </section>
 
-        <section class="subjects-section">
+        <!-- <section class="subjects-section">
             <div class="container">
                 <h2>Subjects Covered</h2>
                 <div class="subjects-grid">
@@ -90,9 +90,9 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
-        <section class="approach-section">
+        <!-- <section class="approach-section">
             <div class="container">
                 <h2>My Approach</h2>
                 <div class="approach-content">
@@ -101,15 +101,15 @@
                         <ul>
                             <li>Building strong foundational understanding</li>
                             <li>Developing problem-solving skills</li>
-                            <li>Connecting concepts to real-world applications</li>
+                            
                             <li>Fostering mathematical confidence</li>
                         </ul>
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
-        <section class="booking-section">
+        <!-- <section class="booking-section">
             <div class="container">
                 <h2>Book a Session</h2>
                 <div class="booking-content">
@@ -140,9 +140,9 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
-        <section id="contact" class="contact-section">
+        <!-- <section id="contact" class="contact-section">
             <div class="container">
                 <h2>Get in Touch</h2>
                 <div class="contact-content">
@@ -173,7 +173,7 @@
                     </form>
                 </div>
             </div>
-        </section>
+        </section> -->
     </main>
 
     <footer>
