--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Your Name. All rights reserved.</p>
+            <p>&copy; 2024 Cory Spitzer. All rights reserved.</p>
         </div>
     </footer>
 </body>
