--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
         <div class="nav-content">
             <div class="logo">Cory Spitzer</div>
             <div class="nav-links">
-                <a href="index.html#portfolio">My Work</a>
+                <a href="index.html#featured-projects">My Work</a>
                 <a href="tutoring.html">Math Tutoring</a>
                 <a href="https://thentheydied.substack.com/" target="_blank">Writing</a>
                 <a href="contact.html" class="active">Contact</a>
