--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
             <div class="nav-links">
                 <a href="index.html#featured-projects">My Work</a>
                 <a href="tutoring.html">Math Tutoring</a>
-                <a href="https://thentheydied.substack.com/" target="_blank">Writing</a>
+                <a href="writing.html">Writing</a>
                 <a href="contact.html" class="active">Contact</a>
             </div>
             <div class="nav-controls">
