Link logo name to homepage

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body class="light-mode">
     <nav class="main-nav">
         <div class="nav-content">
-            <div class="logo">Cory Spitzer</div>
+            <div class="logo"><a href="index.html">Cory Spitzer</a></div>
             <div class="nav-links">
                 <a href="#featured-projects">My Work</a>
                 <a href="tutoring.html">Math Tutoring</a>
