Add Etch-a-Pixel project

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="nav-links">
                 <a href="#portfolio">My Work</a>
                 <a href="tutoring.html">Math Tutoring</a>
-                <a href="https://thentheydied.substack.com/" target="_blank">Writing</a>
+                <a href="writing.html">Writing</a>
                 <a href="contact.html">Contact</a>
             </div>
             <div class="nav-controls">
@@ -73,6 +73,27 @@
             <div class="container">
                 <h2>Featured Projects</h2>
                 <div class="project-cards">
+
+                    <div class="project-card">
+                        <div class="project-image">
+                            <img src="images/etch-a-pixel.png" alt="Etch-a-Pixel Screenshot">
+                        </div>
+                        <div class="project-content">
+                            <h3>Etch-a-Pixel</h3>
+                            <p>Create a pixelated grid, pick a color and then draw with it.</p>
+                            <div class="project-tech">
+                                <span class="tech-tag">HTML</span>
+                                <span class="tech-tag">CSS</span>
+                                <span class="tech-tag">JavaScript</span>
+                                <span class="tech-tag">GitHub Pages</span>
+                            </div>
+                            <div class="project-links">
+                                <a href="https://coryspitzer.github.io/etch-a-pixel/" class="project-link" target="_blank">Live Demo</a>
+                                <a href="https://github.com/CorySpitzer/etch-a-pixel" class="project-link" target="_blank">Source Code</a>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="project-card" id="project-1">
                         <div class="project-image">
                             <img src="images/math-advice-screenshot2.PNG" alt="Math Study Advice Website">
@@ -91,6 +112,7 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="project-card" id="project-2">
                         <div class="project-image">
                             <img src="images/portfolio-screenshot.PNG" alt="Portfolio Website Screenshot">
@@ -109,6 +131,7 @@
                             </div>
                         </div>
                     </div>
+                    
                 </div>
             </div>
         </section>
