--- a/index.html
+++ b/index.html
@@ -71,7 +71,11 @@
 
         <section id="featured-projects" class="projects-section">
             <div class="container">
-                <h2>Featured Projects</h2>
+                <section class="featured-header">
+                    <div class="container">
+                        <h2>Featured Projects</h2>
+                    </div>
+                </section>
                 <div class="project-cards">
 
                     <div class="project-card">
@@ -132,6 +136,39 @@
                         </div>
                     </div>
                     
+                </div>
+            </div>
+            <section id="under-construction" class="under-construction">
+                <div class="container">
+                    <h2>🚧 Projects Under Construction: 🚧</h2>
+                    <!-- <p>More exciting projects coming soon!</p> -->
+                </div>
+            </section>
+        </section>
+
+
+        <section class="projects">
+            <div class="container">
+                <div class="project-cards">
+                    <div class="project-card">
+                        <div class="project-image">
+                            <img src="images/Rect-calc.png" alt="Calculator Screenshot">
+                        </div>
+                        <div class="project-content">
+                            <h3>Calculator</h3>
+                            <p>A sleek and functional calculator built with vanilla JavaScript. Features basic arithmetic operations and a clean, modern interface.</p>
+                            <div class="project-tech">
+                                <span class="tech-tag">HTML</span>
+                                <span class="tech-tag">CSS</span>
+                                <span class="tech-tag">JavaScript</span>
+                                <span class="tech-tag">GitHub Pages</span>
+                            </div>
+                            <div class="project-links">
+                                <a href="https://coryspitzer.github.io/calculator/" class="project-link" target="_blank">Live Demo</a>
+                                <a href="https://github.com/CorySpitzer/calculator" class="project-link" target="_blank">Source Code</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
