Fix project headers on mobile

--- a/index.html
+++ b/index.html
@@ -138,16 +138,15 @@
                     
                 </div>
             </div>
-            <section id="under-construction" class="under-construction">
-                <div class="container">
-                    <h2>🚧 Projects Under Construction: 🚧</h2>
-                    <!-- <p>More exciting projects coming soon!</p> -->
-                </div>
-            </section>
+        </section>
+        
+        <section id="under-construction" class="under-construction">
+            <div class="container">
+                <h2>🚧 Projects Under Construction: 🚧</h2>
+            </div>
         </section>
 
-
-        <section class="projects">
+        <section class="under-construction-projects">
             <div class="container">
                 <div class="project-cards">
                     <div class="project-card">
