Add contact link in tutoring section

--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
             <div class="container">
                 <h1>Get in Touch</h1>
                 <div class="contact-content">
-                    <p>I'm always interested in connecting with fellow developers, educators, and potential collaborators. Feel free to reach out through any of the following channels:</p>
+                    <p>I'm always interested in connecting with fellow developers, educators, potential collaborators and students. Feel free to reach out through any of the following channels:</p>
                     
                     <div class="contact-links">
                         <a href="mailto:cory@coryspitzer.com" class="contact-link">
