--- a/tutoring.html
+++ b/tutoring.html
@@ -53,7 +53,9 @@
         <section class="hero tutoring-hero">
             <div class="container">
                 <h1>Math Tutoring</h1>
-                <p class="lead">I am a patient and dedicated math tutor with a passion for making math understandable and approachable. With top grades in Calculus I through III, Linear Algebra, Discrete Math, and Statistics, I bring a strong foundation to every session. Specializing in algebra, I take pride in helping students build confidence and master key concepts at their own pace, always tailoring my approach to suit their unique learning styles. My goal is to inspire a love for math while ensuring each student feels supported and empowered.</p>
+                <p class="lead">I am a patient and dedicated math tutor with a passion for making math understandable and approachable. With top grades in Calculus I through III, Linear Algebra, Discrete Math, and Statistics, I bring a strong foundation to every session. Specializing in algebra, I take pride in helping students build confidence and master key concepts at their own pace, always tailoring my approach to suit their unique learning styles. My goal is to inspire a love for math while ensuring each student feels supported and empowered. </p>  
+                <br>  
+                <p>Please don't hesitate to <a href="contact.html">contact me</a> if you have any questions or would like to schedule a virtual or in-person session.</p>
             </div>
         </section>
 
