--- a/writing.html
+++ b/writing.html
@@ -57,7 +57,9 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Cory Spitzer. All rights reserved.</p>
+        <div class="container">
+            <p>&copy; 2024 Cory Spitzer. All rights reserved.</p>
+        </div>
     </footer>
 </body>
 </html>
