--- a/writing.html
+++ b/writing.html
@@ -57,8 +57,8 @@
     </main>
 
     <footer>
-        <div class="container">
-            <p>&copy; 2024 Cory Spitzer. All rights reserved.</p>
+        <div class="copyright">
+            &copy; 2023 Cory Spitzer. All rights reserved.
         </div>
     </footer>
 </body>
