Edit copy and add links

--- a/writing.html
+++ b/writing.html
@@ -52,7 +52,7 @@
     <main class="content-container">
         <section class="writing-section">
             <h1>Writing</h1>
-            <p>I write mostly humorous and sometimes dark flash fiction. See it at <a href="https://thentheydied.substack.com/" target="_blank">https://thentheydied.substack.com/</a></p>
+            <p>I write mostly humorous and sometimes dark flash fiction. I recommend you read it with others as this will increase the humor factor. See it at <a href="https://thentheydied.substack.com/" target="_blank">Substack</a>.</p>
         </section>
     </main>
 
