--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             I <a href="tutoring.html">teach</a> mathematics patiently and clearly, utilizing simple examples to illustrate challenging concepts. I challenge my students to go slightly beyond their comfort zones, while making mathematics more enjoyable. 
                         </p>
                         <p class="bio-text">
-                            My <a href="thentheydied.substack.com">writing</a> is often humorous but frequently touches upon serious subjects.
+                            My <a href="https://thentheydied.substack.com/" target="_blank">writing</a> is often humorous but frequently touches upon serious subjects.
                         </p>
                     </div>
                 </div>
